Fixed header spacing.

--- a/server/public/css/header.scss
+++ b/server/public/css/header.scss
@@ -20,7 +20,7 @@
 
             .fb-like {
                 float: right;
-                margin: 10px 0;
+                margin: 7px 0;
             }
 
             @media only screen and (max-width: 479px) {
